--- a/src/css/variables/layout.css
+++ b/src/css/variables/layout.css
@@ -2,5 +2,5 @@
 
 :root {
   --spacing-header-top: 4rem;
-  --spacing-home-content: 6rem;
+  --padding-main-container: 10vw;
 }
